--- a/simple-express/views/index.pug
+++ b/simple-express/views/index.pug
@@ -1,4 +1,8 @@
 extends _layouts/master
 
 block content
-  h1 首頁
+  div 
+    h1 首頁
+    a(href="/about") 關於我們 <br>
+    a(href="/stock") 股票頁 <br>
+    a(href="/test") 測試頁 
