--- a/simple-express/views/stock/list.pug
+++ b/simple-express/views/stock/list.pug
@@ -3,7 +3,7 @@ extends ../_layouts/master
 block content
   div 
     h1 股票列表頁
-    input
+    input(type="text" value="")
     table
       tr
         th 股票代號
