--- a/simple-express/views/_layouts/header.pug
+++ b/simple-express/views/_layouts/header.pug
@@ -1,3 +1,10 @@
-header
-  #header
-    h2 MFEE 16 Express 練習
+head
+ul
+  li
+    a(href="/") 首頁
+  li 
+    a(href="/stock") 股票資料
+  li
+    a(href="/auth/login") 登入
+  li
+    a(href="/auth/register") 註冊
