--- a/simple-express/views/auth/register.pug
+++ b/simple-express/views/auth/register.pug
@@ -3,18 +3,18 @@ extends ../_layouts/master
 block content 
     h1 註冊表點
     
-    form.form#registerFrm(method="POST", action="auth/register")
+    form.form#registerFrm(method="POST", action="/auth/register")
         div
             label(for="email") Email
-            input(name="email", type="mail")
+            input(name="email", type="mail" value="test@gmail.com")
         div
             label(for="password") 密碼
-            input(name="password", type="password")
+            input(name="password", type="password" value="123456")
         div
             label(for="confirmPassword") 確認密碼
-            input(name="confirmPassword", type="password")
+            input(name="confirmPassword", type="password" value="123456")
         div
             label(for="name") 姓名
-            input(name="name", type="text")
+            input(name="name", type="text" value="Norman")
             
         button(type="submit") 送出
