--- a/simple-express/views/auth/register.pug
+++ b/simple-express/views/auth/register.pug
@@ -1,7 +1,7 @@
 extends ../_layouts/master
 
 block content 
-    h1 註冊表點
+    h1 註冊表單
     
     form.form#registerFrm(method="POST", action="/auth/register", enctype="multipart/form-data")
         div
