--- a/simple-express/views/_layouts/master.pug
+++ b/simple-express/views/_layouts/master.pug
@@ -6,8 +6,18 @@ html
     link(rel="stylesheet", href="/styles/main.css")
     script(src="https://code.jquery.com/jquery-3.6.0.min.js")
     script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
+
+    if message 
+      script(src="//cdn.jsdelivr.net/npm/sweetalert2@11")
     block scripts
   body
     include header 
     block content
     include footer
+
+  if message
+    script.
+      Swal.fire({
+        title: "#{message.title}",
+        text: "#{message.text}"
+      })
